// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OuSAdresser /> should render a ressource web component 1`] = `
.c0 {
  margin-bottom: 1.6rem;
  padding: 3.2rem;
  background-color: #e4e8ef;
  border-radius: 0.6rem;
}

.c1 {
  display: block;
  margin-bottom: 0.4rem;
}

@media (max-width:600px) {
  .c0 {
    padding: 1rem 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <strong
      class="c1"
    >
      Ou s'adresser ?
    </strong>
    <a
      aria-label="Label du lien ! (nouvelle fenêtre)"
      href="url du lien"
      rel="noopener noreferrer"
      target="_blank"
    >
      Label du lien !
    </a>
  </div>
</div>
`;

exports[`<OuSAdresser /> should render a simple case 1`] = `
.c2 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c0 {
  margin-bottom: 1.6rem;
  padding: 3.2rem;
  background-color: #e4e8ef;
  border-radius: 0.6rem;
}

.c1 {
  display: block;
  margin-bottom: 0.4rem;
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 1rem 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <strong
      class="c1"
    >
      Ou s'adresser ?
    </strong>
    <h2
      class="c2"
      data-testid="heading"
    >
      Nom du centre
    </h2>
    <p>
      Un paragraphe tout bête
    </p>
  </div>
</div>
`;
